<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.administrator.aninterface.Changepsw"
    android:orientation="vertical"
    android:background="#EEEEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--top-->
    <RelativeLayout
        android:id="@+id/activity_changepsw_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_top"
        app:layout_constraintBottom_toTopOf="@+id/content_gaoshu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/activity_changepsw_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ic_left_back"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:contentDescription="@string/td" />

        <TextView
            android:id="@+id/activity_changepsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/changepsw"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <!--body-->
    <LinearLayout
        android:id="@+id/content_gaoshu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="#EEEEEEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_changepsw_top">
        <EditText
            android:id="@+id/oldpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="16dp"
            android:hint="@string/oldpsw"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="60dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#cccccc" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="16dp"
            android:hint="@string/newpsw"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="121dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#cccccc" />

        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="16dp"
            android:hint="@string/confirmnewpsw"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="121dp" />

        <Button
            android:id="@+id/btn_changepsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="201dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
